<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/app_background"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:orientation="vertical"
  tools:context=".posadd.PosAddActivity">

  <include layout="@layout/title_bar_white" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical">

      <LinearLayout
        style="@style/lists_item_container"
        android:layout_marginTop="10dp">

        <TextView
          style="@style/lists_item_text"
          android:layout_marginEnd="12dp"
          android:layout_marginRight="12dp"
          android:text="@string/pos_add_item_name" />

        <com.cardvlaue.sys.util.EditData
          android:id="@+id/et_pos_add_id"
          style="@style/lists_item_text"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:hint="@string/pos_add_item_name_hint"
          android:textAppearance="@style/TextAppearance.FontPath"
          app:inputLabel="添加商编"
          app:inputName="password"
          app:pageName="posadd" />
      </LinearLayout>

      <WebView
        android:id="@+id/web_pos_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
    </LinearLayout>
  </ScrollView>

  <Button
    android:id="@+id/btn_pos_add_commit"
    style="@style/lists_commit_button"
    android:text="@string/pos_add_commit" />
</LinearLayout>